Date filter on Android Chrome Z-Index was causing it date time box to show over calendar. And we don't need autocomplete here. https://github.com/OpenACalendar/OpenACalendar-Web-Core/issues/588

--- a/core/theme/default/css/libIndexAndSite/main.less
+++ b/core/theme/default/css/libIndexAndSite/main.less
@@ -257,7 +257,6 @@ ul.mainListEvents li.event, div.mainShowEvent {
 		width: 60px;
 		height: 80px;
 		position: relative;
-		z-index: 100;
 		margin: 0 10px 10px 0;
 		border: 2px solid #231f20;
 		.rounded-corners(4px);
