--- a/core/theme/default/css/libSite/main.less
+++ b/core/theme/default/css/libSite/main.less
@@ -532,7 +532,6 @@ ul.history {
 			width: 60px;
 			height: 80px;
 			position: relative;
-			z-index: 100;
 			margin-right: 5px;
 			border: 2px solid #231f20;
 			.rounded-corners(4px);
@@ -979,7 +978,6 @@ ul.mainListImportedEvents li.importedevent, div.importedevent {
 		width: 60px;
 		height: 80px;
 		position: relative;
-		z-index: 100;
 		margin: 0 10px 10px 0;
 		border: 2px solid #555555;
 		.rounded-corners(1px);
